--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,3 +1,4 @@
+<p class="alert alert-info">Nous sommes le {{today | date : 'dd/MM/yyyy HH:mm'}}</p>
 <h1 [ngStyle]="{color:colorText}">Liste des tâches à réaliser</h1>
 <ul class="list-group">
   <li class="list-group-item" *ngFor="let todo of todos;let i = index">
