--- a/src/app/single-todo/single-todo.component.html
+++ b/src/app/single-todo/single-todo.component.html
@@ -3,7 +3,7 @@
   <img [src]="todo.image" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{todo.todoName}}</h5>
-    <h5 class="card-title">{{todo.todoStatus}}</h5>
+    <h5 class="card-title">{{todo.description}}</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a [routerLink]="['/todos']" class="btn btn-primary">retour</a>
   </div>
