--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,6 +21,10 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['add-todo']">Ajouter une tâche</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['users']">Utilisateurs</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
